--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -16,17 +16,18 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - elixir: 1.11.x
-            otp: 23.2.x
+          - elixir: 1.17.2
+            otp: 26.2.5
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
     - uses: erlef/setup-elixir@v1
       with:
         otp-version: ${{matrix.otp}}
         elixir-version: ${{matrix.elixir}}
+        version-type: "strict"
     - name: Cache build artifacts
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: |
           ~/.hex
@@ -40,15 +41,16 @@ jobs:
         mix local.rebar --force
         mix local.hex --force
         mix deps.get
+    # https://elixirforum.com/t/github-action-cache-elixir-always-recompiles-dependencies-elixir-1-13-3/45994/12
+    - name: Compile Deps
+      run: mix loadpaths
     - name: Compile
       run: MIX_ENV=test mix compile --force --warnings-as-errors
     - name: Run Tests
       run: mix test
     - name: Check format
       run: mix format --check-formatted
-    - name: Run docception
-      run: MIX_ENV=test mix docception README.md
     - name: Credo
       run: MIX_ENV=test mix credo --strict
-    - name: Dialyzer
-      run: MIX_ENV=test mix dialyzer --halt-exit-status
+#    - name: Dialyzer
+#      run: MIX_ENV=test mix dialyzer --halt-exit-status
